CloudFormation/blue-cluster.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  EKS cluster (dedicated VPC: true, dedicated IAM: true) [created and managed by
  eksctl]
Mappings:
  ServicePrincipalPartitionMap:
    aws:
      EC2: ec2.amazonaws.com
      EKS: eks.amazonaws.com
      EKSFargatePods: eks-fargate-pods.amazonaws.com
    aws-cn:
      EC2: ec2.amazonaws.com.cn
      EKS: eks.amazonaws.com
      EKSFargatePods: eks-fargate-pods.amazonaws.com
    aws-us-gov:
      EC2: ec2.amazonaws.com
      EKS: eks.amazonaws.com
      EKSFargatePods: eks-fargate-pods.amazonaws.com
Resources:
  ClusterSharedNodeSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Communication between all nodes in the cluster
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/ClusterSharedNodeSecurityGroup"
      VpcId: !Ref VPC
  ControlPlane:
    Type: "AWS::EKS::Cluster"
    Properties:
      EncryptionConfig:
        - Provider:
            KeyArn: >-
              {kms}
          Resources:
            - secrets
      Name: blue-environment
      ResourcesVpcConfig:
        SecurityGroupIds:
          - !Ref ControlPlaneSecurityGroup
        SubnetIds:
          - !Ref SubnetPublicUSEAST2A
          - !Ref SubnetPublicUSEAST2B
          - !Ref SubnetPrivateUSEAST2A
          - !Ref SubnetPrivateUSEAST2B
      RoleArn: !GetAtt
        - ServiceRole
        - Arn
      Version: "1.17"
  ControlPlaneSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Communication between the control plane and worker nodegroups
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/ControlPlaneSecurityGroup"
      VpcId: !Ref VPC
  IngressDefaultClusterToNodeSG:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      Description: >-
        Allow managed and unmanaged nodes to communicate with each other (all
        ports)
      FromPort: 0
      GroupId: !Ref ClusterSharedNodeSecurityGroup
      IpProtocol: "-1"
      SourceSecurityGroupId: !GetAtt
        - ControlPlane
        - ClusterSecurityGroupId
      ToPort: 65535
  IngressInterNodeGroupSG:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      Description: Allow nodes to communicate with each other (all ports).
      FromPort: 0
      GroupId: !Ref ClusterSharedNodeSecurityGroup
      IpProtocol: "-1"
      SourceSecurityGroupId: !Ref ClusterSharedNodeSecurityGroup
      ToPort: 65535
  IngressNodeToDefaultClusterSG:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      Description: Allow unmanaged nodes to communicate with control plane (all ports)
      FromPort: 0
      GroupId: !GetAtt
        - ControlPlane
        - ClusterSecurityGroupId
      IpProtocol: "-1"
      SourceSecurityGroupId: !Ref ClusterSharedNodeSecurityGroup
      ToPort: 65535
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/InternetGateway"
  NATGateway:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt
        - NATIP
        - AllocationId
      SubnetId: !Ref SubnetPublicUSEAST2A
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/NATGateway"
  NATIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/NATIP"
  NATPrivateSubnetRouteUSEAST2A:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
      RouteTableId: !Ref PrivateRouteTableUSEAST2A
  NATPrivateSubnetRouteUSEAST2B:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
      RouteTableId: !Ref PrivateRouteTableUSEAST2B
  PolicyCloudWatchMetrics:
    Type: "AWS::IAM::Policy"
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - "cloudwatch:PutMetricData"
            Effect: Allow
            Resource: "*"
        Version: 2012-10-17
      PolicyName: !Sub "${AWS::StackName}-PolicyCloudWatchMetrics"
      Roles:
        - !Ref ServiceRole
  PolicyELBPermissions:
    Type: "AWS::IAM::Policy"
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - "ec2:DescribeAccountAttributes"
            Effect: Allow
            Resource: "*"
        Version: 2012-10-17
      PolicyName: !Sub "${AWS::StackName}-PolicyELBPermissions"
      Roles:
        - !Ref ServiceRole
  PrivateRouteTableUSEAST2A:
    Type: "AWS::EC2::RouteTable"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/PrivateRouteTableUSEAST2A"
      VpcId: !Ref VPC
  PrivateRouteTableUSEAST2B:
    Type: "AWS::EC2::RouteTable"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/PrivateRouteTableUSEAST2B"
      VpcId: !Ref VPC
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/PublicRouteTable"
      VpcId: !Ref VPC
  PublicSubnetRoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
    DependsOn:
      - VPCGatewayAttachment
  RouteTableAssociationPrivateUSEAST2A:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateRouteTableUSEAST2A
      SubnetId: !Ref SubnetPrivateUSEAST2A
  RouteTableAssociationPrivateUSEAST2B:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateRouteTableUSEAST2B
      SubnetId: !Ref SubnetPrivateUSEAST2B
  RouteTableAssociationPublicUSEAST2A:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref SubnetPublicUSEAST2A
  RouteTableAssociationPublicUSEAST2B:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref SubnetPublicUSEAST2B
  ServiceRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action:
              - "sts:AssumeRole"
            Effect: Allow
            Principal:
              Service:
                - !FindInMap
                  - ServicePrincipalPartitionMap
                  - !Ref "AWS::Partition"
                  - EKS
                - !FindInMap
                  - ServicePrincipalPartitionMap
                  - !Ref "AWS::Partition"
                  - EKSFargatePods
        Version: 2012-10-17
      ManagedPolicyArns:
        - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonEKSClusterPolicy"
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/ServiceRole"
  SubnetPrivateUSEAST2A:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: us-east-2a
      CidrBlock: 192.168.64.0/19
      Tags:
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
        - Key: Name
          Value: !Sub "${AWS::StackName}/SubnetPrivateUSEAST2A"
      VpcId: !Ref VPC
  SubnetPrivateUSEAST2B:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: us-east-2b
      CidrBlock: 192.168.96.0/19
      Tags:
        - Key: kubernetes.io/role/internal-elb
          Value: "1"
        - Key: Name
          Value: !Sub "${AWS::StackName}/SubnetPrivateUSEAST2B"
      VpcId: !Ref VPC
  SubnetPublicUSEAST2A:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: us-east-2a
      CidrBlock: 192.168.0.0/19
      MapPublicIpOnLaunch: true
      Tags:
        - Key: kubernetes.io/role/elb
          Value: "1"
        - Key: Name
          Value: !Sub "${AWS::StackName}/SubnetPublicUSEAST2A"
      VpcId: !Ref VPC
  SubnetPublicUSEAST2B:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: us-east-2b
      CidrBlock: 192.168.32.0/19
      MapPublicIpOnLaunch: true
      Tags:
        - Key: kubernetes.io/role/elb
          Value: "1"
        - Key: Name
          Value: !Sub "${AWS::StackName}/SubnetPublicUSEAST2B"
      VpcId: !Ref VPC
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 192.168.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}/VPC"
  VPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
Outputs:
  ARN:
    Export:
      Name: !Sub "${AWS::StackName}::ARN"
    Value: !GetAtt
      - ControlPlane
      - Arn
  CertificateAuthorityData:
    Value: !GetAtt
      - ControlPlane
      - CertificateAuthorityData
  ClusterSecurityGroupId:
    Export:
      Name: !Sub "${AWS::StackName}::ClusterSecurityGroupId"
    Value: !GetAtt
      - ControlPlane
      - ClusterSecurityGroupId
  ClusterStackName:
    Value: !Ref "AWS::StackName"
  Endpoint:
    Export:
      Name: !Sub "${AWS::StackName}::Endpoint"
    Value: !GetAtt
      - ControlPlane
      - Endpoint
  FeatureNATMode:
    Value: Single
  SecurityGroup:
    Export:
      Name: !Sub "${AWS::StackName}::SecurityGroup"
    Value: !Ref ControlPlaneSecurityGroup
  ServiceRoleARN:
    Export:
      Name: !Sub "${AWS::StackName}::ServiceRoleARN"
    Value: !GetAtt
      - ServiceRole
      - Arn
  SharedNodeSecurityGroup:
    Export:
      Name: !Sub "${AWS::StackName}::SharedNodeSecurityGroup"
    Value: !Ref ClusterSharedNodeSecurityGroup
  SubnetsPrivate:
    Export:
      Name: !Sub "${AWS::StackName}::SubnetsPrivate"
    Value: !Join
      - ","
      - - !Ref SubnetPrivateUSEAST2A
        - !Ref SubnetPrivateUSEAST2B
  SubnetsPublic:
    Export:
      Name: !Sub "${AWS::StackName}::SubnetsPublic"
    Value: !Join
      - ","
      - - !Ref SubnetPublicUSEAST2A
        - !Ref SubnetPublicUSEAST2B
  VPC:
    Export:
      Name: !Sub "${AWS::StackName}::VPC"
    Value: !Ref VPC
